--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <div class="form-group">
         <select name="task-type" class="select-dropdown">
           <option value="" disabled selected>Pick a task type</option>
-          <option value="Print">Print</option>
-          <option value="Web">Web</option>
-          <option value="Mobile">Mobile</option>
+          <option value="House Work">House Work</option>
+          <option value="Yard Work">Yard Work</option>
+          <option value="Deep Clean">Deep Cleaning</option>
         </select>
       </div>
       <div class="form-group">
